--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: saving # คุณสามารถเปลี่ยนชื่อนี้ได้ตามต้องการ
     env: php
     plan: free
+    phpVersion: '8.1' # ระบุเวอร์ชัน PHP ให้ชัดเจน
     # คำสั่งสำหรับเริ่มการทำงานของเว็บเซิร์ฟเวอร์ Apache
     startCommand: apache2-foreground
     healthCheckPath: /index.html
